--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Aedelor World Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../scripts/leaflet.css">
-    <script src="../scripts/leaflet.js"></script>
+    <link rel="stylesheet" href="scripts/leaflet.css">
+    <script src="scripts/leaflet.js"></script>
   </head>
   
   <body style="height: 100%;margin: 0;">
